<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context="com.example.mohamed.restaurant.MainActivity">

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/restaurant"
        android:contentDescription="@string/image_description" />

    <TextView
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_text_view" />

    <TextView
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_info_text_view" />

    <TextView
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_text_view" />

    <TextView
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_text_view" />

    <TextView
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_text_view" />

</LinearLayout>
